Adds toc and code-copy entries

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -102,3 +102,7 @@ site:
       contents:
       - text: Media
         href: other-resources/media.Rmd
+format:
+  html:
+    toc: true
+    code-copy: true
